# Q4-Hackathon-Backend

./: .pre-commit-config.yaml  CLI_USAGE.md  DEPLOYMENT.md  README.md  agent.py  dockerfile  main.py  populate_db.py  populate_log.txt  pyproject.toml  quick_populate.py  render.yaml  requirements.txt  retrieving.py  server.py  simple_populate.py  test_system.py  validation.py
docs/: api.md  development.md
src/: main.py
src/agents/: agent_tools.py  rag_agent.py
src/api/: main.py  models.py
src/api/middleware/: __init__.py  security.py
src/api/routes/: rag.py
src/api/v1/: endpoints.py
src/chat/: __init__.py  endpoints.py  models.py  services.py  utils.py
src/cli/: query_cli.py
src/config/: settings.py
src/core/: __init__.py  config.py  constants.py  database.py  exceptions.py  openai_client.py  rate_limiter.py  vector_db.py
src/models/: content_chunk.py  validation_models.py
src/rag/: __init__.py  agents.py  models.py  services.py  utils.py
src/services/: __init__.py  agent_tools.py  base_service.py  chunking_service.py  crawler_service.py  embedding_service.py  pipeline_service.py  response_formatter.py  retrieval_service.py  session_service.py  storage_service.py  validation_helper.py  validation_service.py
src/utils/: __init__.py  content_processing.py  exceptions.py  logging.py  text_processing.py  url_validator.py  validation.py  validation_dataset.py
tests/: conftest.py  test_chunking.py  test_crawler.py  test_embedding.py  test_integration.py  test_retrieval.py  test_storage.py  test_validation.py
tests/contract/: test_chat_completion.py  test_chat_validate.py  test_session_flow.py
tests/integration/: test_chat_flow.py  test_conversation_flow.py  test_end_to_end.py  test_response_accuracy.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: test_session_service.py  test_validation_service.py
